# bsai-simple

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: code-quality.md  pre-commit.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-start.sh
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  security.yml
src/agent/: logging.py
src/agent/core/: agent.py
src/agent/graph/: state.py  workflow.py
src/agent/graph/nodes/: __init__.py  executor.py  planner.py  replanner.py
src/agent/llm/: client.py
src/agent/models/: __init__.py  plan.py
src/agent/prompts/: __init__.py  prompts.yaml
src/agent/tools/: file.py
tests/: test_agent.py  test_file_tools.py  test_llm_client.py  test_state.py  test_workflow.py
